Added Fashion section

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "xenonsport",
   "license": "ISC",
   "devDependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "browser-sync": "^2.27.11",
     "del": "^6.1.1",
     "gulp": "^4.0.2",
@@ -20,5 +21,8 @@
     "jquery": "^3.6.3",
     "sass": "^1.58.3",
     "slick-carousel": "^1.8.1"
+  },
+  "dependencies": {
+    "@fancyapps/ui": "^5.0.2"
   }
 }
